Created some basic specs allowing users to change details, and reset passwords (models.py, views.py, urls.py
